feat: 添加图片管理和灯箱预览功能
- 集成 7 张项目作品图片到 Portfolio 组件
- 实现点击放大灯箱效果，支持点击背景和按钮关闭
- 添加 fadeIn 和 zoomIn 动画效果
- 配置 /public/images 目录用于图片管理
- 更新 constants.ts 中的项目数据，包含实际图片路径
- 扩展 types.ts 中的 Project 接口添加 category 字段
- 优化 vite.config.ts 配置 publicDir
- 响应式设计支持全尺寸设备预览

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
               'breathe': 'breathe 4s ease-in-out infinite',
               'breathe-opacity': 'breathe-opacity 5s ease-in-out infinite',
               'breathe-scale': 'breathe-scale 6s ease-in-out infinite',
+              'fadeIn': 'fadeIn 0.3s ease-in-out',
+              'zoomIn': 'zoomIn 0.4s ease-out',
             },
             keyframes: {
               float: {
@@ -62,6 +64,14 @@
               'breathe-scale': {
                 '0%, 100%': { transform: 'scale(1) scaleY(1)' },
                 '50%': { transform: 'scale(1.1) scaleY(1.05)' },
+              },
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              zoomIn: {
+                '0%': { transform: 'scale(0.95)', opacity: '0' },
+                '100%': { transform: 'scale(1)', opacity: '1' },
               }
             }
           }
