style: 优化 Hero 页面字体大小和间距布局
- 主标题 WAYNE 从 4xl-8xl 增大到 5xl-9xl（像素点阵字体更突出）
- 副标题 HYBRID CREATIVE 从 xs-base 增大到 sm-lg（提高可读性）
- 描述文本和按钮从 xs-base 增大到 sm-lg（保持视觉层次）
- 优化元素间距：mb-6/8/10  mb-8/10/12（更均衡的白空间）
- 按钮内边距增大 px-6/8/10  px-8/10/12（更宽敞的交互目标）
- 按钮间隔从 gap-3/5 增大到 gap-4/6（更舒适的布局）
- 整体视觉层次更清晰，适配所有设备尺寸（手机到桌面）

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wayne | Hybrid Creative</title>
     <meta name="description" content="Wayne的作品集 - 融合设计美学与代码逻辑" />
+    <!-- Pixel Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -22,6 +24,7 @@
             fontFamily: {
               sans: ['Inter', '-apple-system', 'BlinkMacSystemFont', 'sans-serif'],
               mono: ['JetBrains Mono', 'monospace'],
+              pixel: ['Press Start 2P', 'monospace'],
             },
             borderRadius: {
               '4xl': '2rem',
